--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express-validator": "^6.4.0",
     "jsonwebtoken": "^8.5.1",
     "method-override": "^3.0.0",
+    "mongoose": "^5.9.11",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0"
   },
